Added set Slackware version via config
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/conf/slpkg.conf
+++ b/conf/slpkg.conf
@@ -26,6 +26,10 @@
 # Slackware release "stable" or "current".
 RELEASE=stable
 
+# Set Slackware version. It's not necessary only for some reasons.
+# Default is "off".
+SLACKWARE_VERSION=off
+
 # Build directory for repository "sbo" slackbuilds.org. In this 
 # directory downloaded sources and scripts for building.
 BUILD_PATH=/tmp/slpkg/build/
