Update slpkg.conf configuration file
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/conf/slpkg.conf
+++ b/conf/slpkg.conf
@@ -23,7 +23,7 @@
 # END OF LEGAL NOTICE
 #
 # ----------------------------------------------------------------------------
-# Slackware release "stable" or "current".
+# Set Slackware release "stable" or "current". Default is "stable".
 RELEASE=stable
 
 # Set Slackware version if it's necessary. Default is "off".
@@ -34,6 +34,7 @@ COMP_ARCH=off
 
 # Build directory for repository "sbo" slackbuilds.org. In this 
 # directory downloaded sources and scripts for building.
+# Default is "/tmp/slpkg/build/".
 BUILD_PATH=/tmp/slpkg/build/
 
 # Alternative source downloads for the "sbo" repository. Default is "off".
@@ -41,7 +42,7 @@ SBOSRCARCH=off
 SBOSRCARCH_LINK=http://slackware.uk/sbosrcarch/by-name/
 
 # Download directory for others repositories that use binaries files
-# for installation.
+# for installation. Default is "/tmp/slpkg/packages/"
 PACKAGES=/tmp/slpkg/packages/
 
 # Download directory for Slackware patches file.
@@ -55,8 +56,7 @@ CHECKMD5=on
 DEL_ALL=on
 
 # Delete build directory after each process if DEL_BUILD is "on".
-# Settings for the repository "sbo" slackbuilds.org.
-# Default is "off".
+# Settings for the repository "sbo" slackbuilds.org. Default is "off".
 DEL_BUILD=off
 
 # Keep build log file if SBO_BUILD_LOG is "on". Default is "on".
@@ -77,8 +77,7 @@ DEFAULT_ANSWER=n
 REMOVE_DEPS_ANSWER=n
 
 # If you want build UNSUPPORTED or UNTESTED packages choose "y".
-# Settings for the repository "sbo" slackbuilds.org.
-# Default is "n".
+# Settings for the repository "sbo" slackbuilds.org. Default is "n".
 SKIP_UNST=n
 
 # If you want to disable automatic resovle dependencies choose "off".
@@ -94,7 +93,7 @@ DEL_DEPS=off
 USE_COLORS=on
 
 # Downloader utility. Four options are supported "wget", "aria2c",
-# "curl" and "http" (HTTPie). Default is wget.
+# "curl" and "http" (HTTPie). Default is "wget".
 DOWNDER=wget
 
 # Downloader [OPTION]. Pass downloader options, for curl use "-L -o" as 
