msb repository switch to 1.18
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/conf/repositories.conf
+++ b/conf/repositories.conf
@@ -26,7 +26,7 @@
 # conrad (Conraid's) repository must used from Slackware64 current.
 # ktown  (Alien"s ktown: 4.14.3 and latest) repository. Default ktown{latest}.
 # slacke (Enlightenment: E17 and E18) repository. Default slacke{18}.
-# msb    (Mate: 1.14, 1.16, latest) repository. Default msb{1.16}
+# msb    (Mate: 1.14, 1.16, 1,18, latest) repository. Default msb{1.18}
 # mles   (Microlinux: desktop, extras, server) repository. Default mles{desktop}
 #
 # Slackware ARM users will must use only two repositories at the moment slack and sbo.
@@ -53,7 +53,7 @@ sbo
 # salix
 # slackl
 # rested
-# msb{1.16}
+# msb{1.18}
 # csb
 # connos
 # mles{desktop}
