Fixed: aria2c downloading files
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/conf/slpkg.conf
+++ b/conf/slpkg.conf
@@ -98,8 +98,8 @@ DOWNDER=wget
 
 # Downloader [OPTION]. Pass downloader options, for curl use "-L -o" as 
 # using to download in specific directory and support any redirects
-# such as from sourceforge repository. No extra option need for aria2c
-# by default to work. Http recommended "-d -c -o" options by default.
+# such as from sourceforge repository. aria2c recommended "--allow-overwrite"
+# options by default. Http recommended "-d -c -o" options by default.
 # Default for wget is "-c -N".
 DOWNDER_OPTIONS=-c -N
 
