Updated .gitlab-ci.yml file
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,37 @@
-image: python:3.7-alpine
+image: "python:3.7"
 
-pages:
-  script:
+before_script:
+  - python --version
   - pip install -r requirements.txt
-  artifacts:
-    paths:
-    - public/
-  only:
-    - develop
+
+stages:
+  - Static Analysis
+  - Test
+
+mypy:
+  stage: Static Analysis
+  script:
+  - pwd
+  - ls -l
+  - python -m mypy bild/file.py
+  - python -m mypy bild/directory.py
+
+flake8:
+  stage: Static Analysis
+  script:
+  - flake8 --max-line-length=120 bild/*.py
+
+pylint:
+  stage: Static Analysis
+  allow_failure: true
+  script:
+  - pylint -d C0301 bild/*.py
+
+unit_test:
+  stage: Test
+  script:
+  - pwd
+  - ls -l
+  - export PYTHONPATH="$PYTHONPATH:."
+  - python -c "import sys;print(sys.path)"
+  - pytest
