Added settings for proxy server #124
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/conf/slpkg.conf
+++ b/conf/slpkg.conf
@@ -123,3 +123,7 @@ EDITOR=nano
 # Warning: Possible failure building packages or running applications after
 # install. Default is "off".
 NOT_DOWNGRADE=off
+
+# If you are working under a proxy server you need to set
+# your proxy server here. Default is null.
+HTTP_PROXY=
